[package]
edition = "2021"
name = "rdiesel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.5"
flux-rs = { git = "https://github.com/flux-rs/flux" }

[dev-dependencies]
diesel = { version = "2.1.5", features = ["postgres"] }

[package.metadata.flux]
enabled = true
