[package]
edition = "2021"
name = "rdiesel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.5"
flux-rs = { git = "https://github.com/flux-rs/flux" }

[dev-dependencies]
diesel = { version = "2.1.5", features = ["postgres"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = "0.2.0"

[dev-dependencies.rocket_sync_db_pools]
default-features = false
features = ["diesel_postgres_pool"]
version = "0.1.0"


[package.metadata.flux]
enabled = true
